# nasa-interview-zillow

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
deliverables/: executive_summary.pages
docker/: docker-compose.yml
nasa_interview_project/data/: CountyCrossWalk_Zillow.csv  SVI_2022_US_county.csv  zillow_new_home.csv
nasa_interview_project/pipeline/: analyze.py  helpers.py  ingest.py  visualize.py
tests/pipeline/: test_analyze.py  test_ingest.py
