[tool.poetry]
name = "nasa-interview-project"
version = "0.1.0"
description = ""
authors = ["Steve DeLaurentis <delaurenetis.steven@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
